# validador-excel

./: README.md  pyproject.toml
app/: frontend.py
data/: csv_invalido.csv  csv_valido.csv
