[tool.poetry]
name = "streamlit-dashbord"
version = "0.1.0"
description = ""
authors = ["rafael"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"
folium = "^0.19.4"
streamlit-folium = "^0.24.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pydeck = "^0.9.1"
wordcloud = "^1.9.4"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.38"
xlsxwriter = "^3.2.2"
plotly = "^6.0.0"
pydantic = {extras = ["email"], version = "^2.10.6"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
